--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <title>Pronúncia360 · Desafio de Sons (v6 Clean)</title>
+  <title>Pronúncia360 · Desafio de Sons</title>
   <style>
     :root{ --blue:#003566; --yellow:#FFD60A; --red:#E63946; --green:#06D6A0; --ink:#111827; --muted:#6B7280; --card:#FFFFFF; --bg:#F7F7F8; --ring:#E5E7EB; }
     *{box-sizing:border-box}
