--- a/index.html
+++ b/index.html
@@ -3,10 +3,295 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <title>Pronúncia360 · Desafio de Sons</title>
+  <meta name="description" content="Jogo interativo para treinar a pronúncia em espanhol. Leia, compare com a voz e marque Acertei/Errei." />
+  <style>
+    :root{ --blue:#003566; --yellow:#FFD60A; --red:#E63946; --green:#06D6A0; --ink:#111827; --muted:#6B7280; --card:#FFFFFF; --bg:#F7F7F8; --ring:#E5E7EB; }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.55 Inter,system-ui,-apple-system,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",Arial,sans-serif}
+    .wrap{max-width:1080px;margin:24px auto;padding:0 16px}
+    header{display:flex;align-items:center;justify-content:space-between;margin:4px 0 12px}
+    .brand{display:flex;align-items:center;gap:10px}
+    .dot{width:14px;height:14px;border-radius:50%;background:conic-gradient(from 0deg,var(--blue),var(--yellow),var(--blue));}
+    h1{font-size:22px;letter-spacing:.2px;margin:0}
+    .tag{background:#F1F5F9;color:#111;border:1px solid var(--ring);padding:6px 10px;border-radius:999px;font-size:12px}
+    .instrucoes-box{background:#f8f9fa;border-left:4px solid #003566;padding:12px 18px;margin:10px 0 16px;border-radius:10px;font-size:15px;line-height:1.6}
+    .instrucoes-box h2{margin:0 0 6px 0;font-size:17px;color:#003566}
+    .row{display:grid;grid-template-columns:1fr;gap:16px}
+    @media(min-width:920px){.row{grid-template-columns:1.05fr .95fr}}
+    .card{background:var(--card);border:1px solid var(--ring);border-radius:18px;box-shadow:0 1px 2px rgba(0,0,0,.04);padding:16px}
+    .chips{display:flex;flex-wrap:wrap;gap:8px}
+    .chip{border:1px solid var(--ring);background:#fff;color:#111827;padding:10px 14px;border-radius:999px;font-weight:600;cursor:pointer}
+    .chip.active{background:var(--blue);color:#fff;border-color:transparent}
+    label{display:block;font-size:12px;color:#6B7280;margin-bottom:6px}
+    select,input[type="number"],button{appearance:none;border-radius:12px;border:1px solid var(--ring);padding:10px 12px;background:#fff;color:var(--ink)}
+    select,input[type="number"]{width:100%}
+    .btn{cursor:pointer;border-color:transparent;font-weight:700}
+    .btn:disabled{opacity:.6;cursor:not-allowed}
+    .btn-primary{background:var(--blue);color:#fff}
+    .btn-ghost{background:#fff;color:#111827;border:1px solid var(--ring)}
+    .btn-stop{background:var(--red);color:#fff}
+    .btn-restart{background:var(--yellow);color:#111}
+    .btn-good{background:var(--green);color:#fff}
+    .btn-bad{background:var(--red);color:#fff}
+    .controls{display:flex;flex-wrap:wrap;gap:10px;align-items:center}
+    .stage{display:grid;gap:14px;align-items:center;justify-items:center;min-height:300px;text-align:center}
+    .countdown{--pct:0; width:140px;height:140px;border-radius:50%;background:conic-gradient(var(--blue) calc(var(--pct)*1%), #e5e7eb 0);position:relative;display:grid;place-items:center}
+    .countdown::after{content:"";position:absolute;inset:10px;border-radius:50%;background:#fff}
+    .countdown span{position:relative;font-size:28px;font-weight:800;color:var(--blue)}
+    .word{font-size:54px;font-weight:800;letter-spacing:.5px}
+    @media(min-width:480px){.word{font-size:64px}}
+    .grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:10px;width:100%;max-width:360px}
+    .progress{height:8px;background:#EEF2F7;border-radius:999px;overflow:hidden;width:100%}
+    .progress>span{display:block;height:100%;background:linear-gradient(90deg,var(--blue),var(--yellow));width:0%}
+    .muted{color:#6B7280}
+  </style>
 </head>
 <body>
-  <h1>Pronúncia360 - Jogo de Pronúncia</h1>
-  <p>Este é o HTML completo (v7.2 com instruções). Colei o código completo no chat acima, e aqui ele será salvo no arquivo ZIP.</p>
+  <div class="wrap">
+    <header>
+      <div class="brand"><div class="dot"></div><h1>Pronúncia360 · Desafio de Sons</h1></div>
+      <div class="tag" id="statusTag">Pronto</div>
+    </header>
+
+    <div class="instrucoes-box">
+      <h2>📌 Como jogar</h2>
+      <ul style="margin:6px 0 0 18px">
+        <li>Leia em voz alta a palavra exibida.</li>
+        <li>Aguarde <strong>5 segundos</strong> para ouvir a pronúncia.</li>
+        <li>Clique em <strong>✔ Acertei</strong> ou <strong>✖ Errei</strong>.</li>
+        <li>Use <strong>↺ Reiniciar</strong> para aplicar mudanças de padrão, voz ou dificuldade.</li>
+      </ul>
+    </div>
+
+    <div class="row">
+      <section class="card">
+        <div class="chips" id="soundChips"></div>
+
+        <!-- GRID de configurações -->
+        <div style="display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:10px;margin-top:14px">
+          <div>
+            <label>Dificuldade</label>
+            <select id="difficulty"><option value="easy">Fácil</option><option value="medium" selected>Médio</option><option value="hard">Difícil</option></select>
+          </div>
+          <div>
+            <label>Rodadas</label>
+            <input type="number" id="rounds" min="3" max="20" value="8" />
+          </div>
+          <div>
+            <label>Voz (TTS)</label>
+            <select id="voice"><option>Desabilitado</option></select>
+            <div style="display:flex;gap:8px;align-items:center;margin-top:6px">
+              <label class="muted" style="font-size:12px;display:flex;gap:6px;align-items:center">
+                <input type="checkbox" id="showAllVoices">
+                Mostrar todas
+              </label>
+              <label class="muted" style="font-size:12px;display:flex;gap:6px;align-items:center">
+                Volume
+                <input type="range" id="voiceVol" min="0" max="1" step="0.05" value="0.9" style="width:90px">
+              </label>
+            </div>
+          </div>
+          <div>
+            <label>&nbsp;</label>
+            <div class="controls">
+              <button id="enableAudioBtn" class="btn btn-ghost" title="Ativar voz">🔊 Voz</button>
+              <!-- Reiniciar sai do grid para evitar sobreposição -->
+            </div>
+          </div>
+        </div>
+
+        <!-- LINHA principal de botões -->
+        <div style="display:flex;align-items:center;justify-content:space-between;margin-top:12px;gap:10px;flex-wrap:wrap">
+          <div class="muted" style="font-size:12px">Cores por função: azul=Iniciar, verde=Acertei, vermelho=Errei/Parar, amarelo=Reiniciar.</div>
+          <div class="controls">
+            <button id="startBtn" class="btn btn-primary">Iniciar jogo</button>
+            <button id="speakBtn" class="btn btn-ghost">Repetir</button>
+            <button id="stopBtn" class="btn btn-stop">Parar</button>
+            <button id="resetBtn" class="btn btn-restart" title="Reiniciar e aplicar">↺ Reiniciar</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="card stage">
+        <div class="countdown" id="countdown"><span id="countVal">5</span></div>
+        <div class="word" id="word">—</div>
+        <div class="grid">
+          <button class="btn btn-good" id="hitBtn" disabled>✔ Acertei</button>
+          <button class="btn btn-bad" id="missBtn" disabled>✖ Errei</button>
+        </div>
+        <div class="progress"><span id="progress"></span></div>
+        <div class="muted" id="helper">Escolha um padrão e clique em Iniciar jogo.</div>
+      </section>
+    </div>
+    <section class="card" id="report" style="display:none;margin-top:16px"></section>
+  </div>
+  <script>
+    // ===== Palavras =====
+    var WORDS={"Vogais":["Ana","Elena","Inés","Olvido","Julio","azul","aroma","otoño","idioma","objeto","Europa","audiencia"],"J":["jamón","joven","julio","jarra","jalapeño","jirafa","jade","jabón","Jujuy","viajar","trabajar","jardín"],"G (GE/GI)":["gente","gitano","gimnasio","gigante","girafa","Argentina","elegir","energía","geografía","girasol"],"Ñ":["España","año","niño","mañana","baño","cariño","sueño","araña","cumpleaños","enseñar"],"CH":["chico","chocolate","churro","escuchar","mochila","derecha","noche","muchacho","Chile","hecho"],"LL / Y":["llave","lluvia","llama","amarillo","ella","ayer","playa","pollo","calle","apoyo","oyente"],"R / RR":["ropa","rápido","carro","perro","torre","correr","arroz","barrio","cerrar","risa","rumor"],"S / Z":["zapato","cerveza","casa","sonrisa","sencillo","sentir","sutil","zorro","zona","azúcar","entusiasmo"],"X":["taxi","examen","éxito","oxígeno","México","próximo","exacto","anexo","exposición","extraño","contexto","flexible"],"H":["hola","hacer","hermano","humo","huevo","horario","hoja","hielo","herida","hospital","ahora","humor"],"B / V":["beso","vaca","beber","vivir","barco","barrio","ventaja","volver","abogado","avenida","vibrar","breve"],"QU / GU":["queso","química","querer","quemar","guitarra","guerra","guía","vergüenza","pingüino","guisar","quitar"]};
+    var soundOrder=Object.keys(WORDS);
+
+    // ===== Estado =====
+    var state={running:false,timer:null,sound:soundOrder[0],difficulty:'medium',totalRounds:8,round:0,score:0,pool:[],current:null,history:[],ttsEnabled:false};
+
+    // ===== Refs =====
+    var chipsBox=document.getElementById('soundChips'),voiceSel=document.getElementById('voice'),statusTag=document.getElementById('statusTag'),wordEl=document.getElementById('word'),progressEl=document.getElementById('progress'),helperEl=document.getElementById('helper'),countdown=document.getElementById('countdown'),countVal=document.getElementById('countVal'),hitBtn=document.getElementById('hitBtn'),missBtn=document.getElementById('missBtn'),startBtn=document.getElementById('startBtn'),stopBtn=document.getElementById('stopBtn'),resetBtn=document.getElementById('resetBtn'),speakBtn=document.getElementById('speakBtn'),diffSel=document.getElementById('difficulty'),roundsInput=document.getElementById('rounds'),report=document.getElementById('report');
+    var showAllVoicesChk=document.getElementById('showAllVoices');
+    var voiceVol=document.getElementById('voiceVol');
+
+    function status(t){statusTag.textContent=t}
+
+    // ===== Chips =====
+    function renderChips(){chipsBox.innerHTML='';for(var i=0;i<soundOrder.length;i++){(function(n){var b=document.createElement('button');b.className='chip'+(state.sound===n?' active':'');b.textContent=n;b.onclick=function(){state.sound=n;renderChips();status('Padrão: '+n+(state.running?' (use Reiniciar para aplicar)':''))};chipsBox.appendChild(b)})(soundOrder[i])}}
+
+    // ===== Util =====
+    function shuffle(a){var b=a.slice(),i=b.length-1;for(;i>0;i--){var j=Math.floor(Math.random()*(i+1)),t=b[i];b[i]=b[j];b[j]=t}return b}
+    function pickPool(){var base=WORDS[state.sound].slice();if(state.difficulty==='easy'){var s=[],i;for(i=0;i<base.length;i++){if(base[i].length<=6)s.push(base[i])}for(i=0;i<base.length;i++){if(base[i].length<=7)s.push(base[i])}base=s.slice(0,Math.max(8,base.length))}if(state.difficulty==='hard'){base=base.concat(base).concat(base)}state.pool=shuffle(base)}
+    function setPct(p){countdown.style.setProperty('--pct',p)}
+
+    // ===== TTS (iPhone friendly) =====
+    function preferredSpanish(voice){
+      var lang=(voice.lang||"").toLowerCase();
+      var name=(voice.name||"").toLowerCase();
+      var isEs = /(^es[-_]|[-_]es$|[-_]mx$|[-_]us$|419)/i.test(lang);
+      var premium = /siri|premium|high quality|enhanced/.test(name);
+      return isEs && premium;
+    }
+    function populateVoices(){
+      while(voiceSel.firstChild) voiceSel.removeChild(voiceSel.firstChild);
+      var all = speechSynthesis.getVoices() || [];
+      var esOnly = all.filter(function(v){ return /(^es[-_]|[-_]es$|[-_]mx$|[-_]us$|419)/i.test((v.lang||"")); });
+      var list;
+      if(showAllVoicesChk && !showAllVoicesChk.checked){
+        var pref = esOnly.filter(preferredSpanish);
+        list = pref.length ? pref : esOnly;
+      } else {
+        list = esOnly.length ? esOnly : all;
+      }
+      if(!list.length){
+        var opt=document.createElement('option'); opt.textContent='Voz padrão (espanhol indisponível)'; voiceSel.appendChild(opt); return;
+      }
+      list.forEach(function(v){
+        var opt=document.createElement('option');
+        opt.value=v.name; opt.textContent=v.name+' · '+v.lang;
+        voiceSel.appendChild(opt);
+      });
+      var idx=0,opts=voiceSel.options;
+      for(var i=0;i<opts.length;i++){ if(/siri/i.test(opts[i].text)){ idx=i; break; } }
+      voiceSel.selectedIndex=idx;
+    }
+    function enableTTS(){
+      try{
+        if(!window.speechSynthesis||!window.SpeechSynthesisUtterance){ alert('Voz não disponível neste navegador.'); return; }
+        state.ttsEnabled=true; status('Voz habilitada');
+        populateVoices();
+        speechSynthesis.onvoiceschanged = populateVoices;
+        // Pré-aquecimento
+        var warm=new SpeechSynthesisUtterance('Listo');
+        warm.lang='es-ES'; warm.rate=0.95; warm.pitch=1.0; warm.volume=parseFloat(voiceVol.value||'0.9');
+        speechSynthesis.cancel(); speechSynthesis.speak(warm);
+      }catch(e){ alert('Falha ao habilitar voz.'); }
+    }
+    function speak(text){
+      if(!state.ttsEnabled) return;
+      try{
+        var all=speechSynthesis.getVoices()||[];
+        var name=voiceSel.value, chosen=null;
+        for(var i=0;i<all.length;i++){ if(all[i].name===name){ chosen=all[i]; break; } }
+        if(!chosen){ for(var j=0;j<all.length;j++){ if(/(^es[-_]|[-_]es$|[-_]mx$|[-_]us$|419)/i.test(all[j].lang||'')){ chosen=all[j]; break; } } }
+        var u=new SpeechSynthesisUtterance(text);
+        if(chosen){ u.voice=chosen; u.lang=chosen.lang; } else { u.lang='es-ES'; }
+        u.rate=0.92; u.pitch=1.0; u.volume=parseFloat(voiceVol.value||'0.9');
+        speechSynthesis.cancel(); speechSynthesis.speak(u);
+      }catch(e){}
+    }
+
+    // ===== Ding de confirmação (WebAudio, opcional) =====
+    var audioCtx;
+    function safeAudioCtx(){ if(!audioCtx) audioCtx = new (window.AudioContext||window.webkitAudioContext)(); return audioCtx; }
+    function playDing(ok){
+      try{
+        var ctx=safeAudioCtx();
+        var o=ctx.createOscillator(), g=ctx.createGain();
+        o.type='sine'; o.frequency.value = ok?880:440;
+        g.gain.value=0.0001; o.connect(g); g.connect(ctx.destination);
+        o.start();
+        var now=ctx.currentTime;
+        g.gain.exponentialRampToValueAtTime(0.2, now+0.02);
+        g.gain.exponentialRampToValueAtTime(0.0001, now+0.15);
+        o.stop(now+0.16);
+      }catch(e){}
+    }
+
+    // ===== Controle =====
+    function stopTimer(){if(state.timer){clearInterval(state.timer);state.timer=null}}
+    function resetGame(){stopTimer();state.running=false;state.round=0;state.score=0;state.history=[];state.current=null;pickPool();progressEl.style.width='0%';wordEl.textContent='—';helperEl.textContent='Clique em Iniciar jogo quando estiver pronto(a).';hitBtn.disabled=true;missBtn.disabled=true;report.style.display='none';startBtn.disabled=false;status('Pronto')}
+    function stopGame(){stopTimer();state.running=false;startBtn.disabled=false;hitBtn.disabled=true;missBtn.disabled=true;status('Parado')}
+    function nextRound(){if(state.round>=state.totalRounds){finish();return}if(state.pool.length===0)pickPool();state.current=state.pool.pop();state.round++;var pct=Math.round((state.round-1)/state.totalRounds*100);progressEl.style.width=pct+'%';wordEl.textContent=state.current;helperEl.innerHTML='Leia em voz alta. Revelo em <strong>5 segundos</strong>.';hitBtn.disabled=true;missBtn.disabled=true;simulateCountdown(5,function(){speak(state.current);hitBtn.disabled=false;missBtn.disabled=false;helperEl.textContent='Compare com a voz e marque Acertei/Errei.'});status('Rodada '+state.round+'/'+state.totalRounds)}
+    function simulateCountdown(n,done){var t=n;countVal.textContent=t;var pct=0;setPct(0);var total=n*10;var i=0;stopTimer();state.timer=setInterval(function(){i++;pct=(i/total)*100;setPct(pct);if(i%10===0){t--;countVal.textContent=(t>0?t:0)}if(i>=total){stopTimer();setPct(100);setTimeout(done,100)}},100)}
+    function registerResult(ok){playDing(!!ok);state.history.push({word:state.current,result:!!ok});if(ok)state.score++;var pct=Math.round((state.round)/state.totalRounds*100);progressEl.style.width=pct+'%';nextRound()}
+    function finish(){
+      state.running=false;
+      var total=state.totalRounds;
+      var acc=Math.round((state.score/total)*100);
+      status('Fim · '+state.score+'/'+total+' ('+acc+'%)');
+      wordEl.textContent='✔ Fim';
+      helperEl.textContent='Veja o relatório e jogue de novo.';
+      hitBtn.disabled=true; missBtn.disabled=true;
+
+      var wrong=[],i;
+      for(i=0;i<state.history.length;i++){ if(!state.history[i].result) wrong.push(state.history[i].word); }
+      var top3=wrong.slice(0,3);
+
+      report.style.display='block';
+      var html='';
+      html += '<div style="display:flex;align-items:center;gap:12px;flex-wrap:wrap">';
+      html +=   '<div style="width:84px;height:84px;border-radius:50%;background:conic-gradient(var(--blue) '+acc+'%, #e5e7eb 0);display:grid;place-items:center;color:var(--blue);font-weight:800">'+acc+'%</div>';
+      html +=   '<div><div style="font-weight:800;font-size:18px">Precisão</div><div class="muted">'+state.score+'/'+total+' acertos</div></div>';
+      html += '</div>';
+      if(wrong.length){
+        html += '<div style="margin-top:10px" class="muted">Mais difíceis:</div><ul style="margin:6px 0 0 18px">';
+        for(i=0;i<top3.length;i++){ html += '<li>'+top3[i]+'</li>'; }
+        html += '</ul>';
+      }
+      html += '<div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">';
+      html +=   '<button id="rematch" class="btn btn-primary">Jogar novamente</button>';
+      html +=   '<button id="change" class="btn btn-ghost">Trocar padrão</button>';
+      html += '</div>';
+      report.innerHTML = html;
+
+      document.getElementById('rematch').onclick=function(){resetGame();startGame()};
+      document.getElementById('change').onclick=function(){resetGame()};
+      startBtn.disabled=false;
+    }
+    function startGame(){
+      state.difficulty=document.getElementById('difficulty').value;
+      var r=parseInt(document.getElementById('rounds').value,10);
+      if(isNaN(r)) r=8;
+      r=Math.max(3,Math.min(20,r));
+      state.totalRounds=r;
+      pickPool();
+      state.running=true;
+      startBtn.disabled=true;
+      hitBtn.disabled=true; missBtn.disabled=true;
+      nextRound();
+    }
+
+    // Eventos
+    document.getElementById('hitBtn').onclick=function(){registerResult(true)};
+    document.getElementById('missBtn').onclick=function(){registerResult(false)};
+    document.getElementById('speakBtn').onclick=function(){if(state.current)speak(state.current)};
+    document.getElementById('startBtn').onclick=startGame;
+    document.getElementById('stopBtn').onclick=stopGame;
+    document.getElementById('resetBtn').onclick=function(){resetGame()};
+    document.getElementById('difficulty').onchange=function(){status('Dificuldade: '+this.options[this.selectedIndex].text+(state.running?' (use Reiniciar para aplicar)':''))};
+    document.getElementById('rounds').onchange=function(){status('Rodadas: '+this.value+(state.running?' (use Reiniciar para aplicar)':''))};
+    document.getElementById('enableAudioBtn').onclick=function(){enableTTS()};
+    if (showAllVoicesChk) showAllVoicesChk.onchange = populateVoices;
+
+    // Init
+    function render(){renderChips();resetGame()} render();
+  </script>
 </body>
 </html>
