--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="instrucoes-box">
       <h2>📌 Como jogar</h2>
       <ul style="margin:6px 0 0 18px">
+        <li>Para ouvir a pronúncia, habilite o botão <strong>🔊 Voz</strong> antes de começar.</li>
         <li>Leia em voz alta a palavra exibida.</li>
         <li>Aguarde <strong>5 segundos</strong> para ouvir a pronúncia.</li>
         <li>Clique em <strong>✔ Acertei</strong> ou <strong>✖ Errei</strong>.</li>
