--- a/index.html
+++ b/index.html
@@ -294,5 +294,9 @@
     // Init
     function render(){renderChips();resetGame()} render();
   </script>
+
+  <footer style="margin-top:24px; text-align:center; font-size:14px; color:#6B7280;">
+  Desenvolvido por <strong>Junia Maria Ananias de Sillos Rodrigues</strong> · Professora de Espanhol
+</footer>
 </body>
 </html>
