--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <h2>📌 Como jogar</h2>
       <ul style="margin:6px 0 0 18px">
         <li>Para ouvir a pronúncia, habilite o botão <strong>🔊 Voz</strong> antes de começar.</li>
+        <li>No seletor de <strong>Voz (TTS)</strong>, escolha <strong>Google Español (es-ES)</strong> ou <strong>Google Español de Estados Unidos (es-US)</strong>.</li>
         <li>Leia em voz alta a palavra exibida.</li>
         <li>Aguarde <strong>5 segundos</strong> para ouvir a pronúncia.</li>
         <li>Clique em <strong>✔ Acertei</strong> ou <strong>✖ Errei</strong>.</li>
